--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -16,6 +16,7 @@
     "@eslint/js": "^9.11.1",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "typescript-eslint": "^8.8.0"
   }
 }
