--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "0x00-es6_basic",
-  "version": "1.0.0",
-  "description": "0x00-ES6_basic",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node",
-    "lint": "eslint ."
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "dev": "npx babel-node",
+    "test": "jest",
+    "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "eslint": "^9.10.0",
-    "globals": "^15.9.0",
-    "jest": "^29.7.0",
-    "typescript-eslint": "^8.8.0"
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.8.0",
+    "@babel/preset-env": "^7.6.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.3",
+    "jest": "^29.7.0"
   }
 }
