--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -8,11 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "mocha": "^10.2.0"
-  },
   "devDependencies": {
     "chai": "^4.3.7",
+    "mocha": "^11.0.1",
     "sinon": "^19.0.2"
   }
 }
